force-app/main/default/objects/Int_PX_Remit__c/Int_PX_Remit__c.object-meta.xml
<CustomObject>
    <description>This contains payments received from PNC</description>
    <label>Int PX Remit</label>
    <nameField>
        <displayFormat>RE-{00000000}</displayFormat>
        <label>Int PX Remint Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int PX Remit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>