force-app/main/default/objects/Int_PX_Remit__c/fields/Consolidated_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consolidated Invoice</label>
    <referenceTo>clcommon__Consolidated_Invoice__c</referenceTo>
    <relationshipLabel>Int PX Remit</relationshipLabel>
    <relationshipName>Int_PX_Remit</relationshipName>
    <type>Lookup</type>
</CustomField>