force-app/main/default/objects/Int_PX_Remit__c/fields/Old_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Old_Invoice_Number__c</fullName>
    <label>Old Invoice Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>