force-app/main/default/objects/Int_PX_Remit__c/fields/Void_in_PNC__c.field-meta.xml
<CustomField>
    <fullName>Void_in_PNC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Void in PNC?</label>
    <type>Checkbox</type>
</CustomField>