force-app/main/default/objects/Int_PX_Remit__c/listViews/all307.listView-meta.xml
<ListView>
    <fullName>all307</fullName>
    <columns>NAME</columns>
    <columns>Committed__c</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Record_Number__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Transaction_Amount__c</columns>
    <columns>Date__c</columns>
    <columns>Invoice_Amount_Paid__c</columns>
    <columns>Account_Num__c</columns>
    <columns>Trans_Source__c</columns>
    <columns>Trans_UID__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Remark__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Num__c</field>
        <operation>contains</operation>
        <value>420</value>
    </filters>
    <label>All307</label>
</ListView>